--- a/assets/css/error.css
+++ b/assets/css/error.css
@@ -1,30 +1,23 @@
-*{
-  transition: all 0.6s;
-}
-
-html {
-  height: 100%;
-}
-
-body{
+#error{
   font-family: 'Lato', sans-serif;
   color: #888;
   margin: 0;
-}
-
-#main{
   display: table;
   width: 100%;
   height: 100vh;
   text-align: center;
 }
 
-.fof{
+#error *{
+  transition: all 0.6s;
+}
+
+#error .fof{
   display: table-cell;
   vertical-align: middle;
 }
 
-.fof h1{
+#error .fof h1{
   font-size: 50px;
   display: inline-block;
   padding-right: 12px;
