--- a/templates/post.html.twig
+++ b/templates/post.html.twig
@@ -1,9 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Posts{% endblock %}
-{% block stylesheets %}
-    <link href="{{ asset('css/post.css') }}" rel="stylesheet">
-{% endblock %}
+{% block stylesheets %}{% endblock %}
 
 {% block body %}
 
